--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,7 +17,8 @@
 
 
     <body>
-        <h2>Hello World!显示中文没有问题</h2>
+        <a href="weeklyreport/login2.html" >前往登录</a>
+        <h2>测试页面21</h2>
         <input type="text" id="username">
         <input type="text" id="password">
         <button id="testbutton">test</button>
