--- a/src/main/webapp/weeklyreport/login2.html
+++ b/src/main/webapp/weeklyreport/login2.html
@@ -31,7 +31,7 @@
 <section id="wrapper" class="login-register">
   <div class="login-box login-sidebar">
     <div class="white-box">
-      <form class="form-horizontal form-material" id="loginform" action="admin_zbxt.html">
+      <form class="form-horizontal form-material" id="loginform" action="teacher_zbxt.html">
         <div class="title">
           欢迎来到研究生周报管理系统！
         </div>
