--- a/src/main/webapp/weeklyreport/user_pwd.html
+++ b/src/main/webapp/weeklyreport/user_pwd.html
@@ -46,7 +46,7 @@
                     <li> <a href="#" class="waves-effect"><i class="mdi mdi-av-timer fa-fw" data-icon="v"></i> <span class="hide-menu">实验室 <span class="fa arrow"></span> </span></a>
                         <ul class="nav nav-second-level">
                             <li> <a href="add_lab.html"><i data-icon="&#xe026;" class="linea-icon linea-basic fa-fw"></i><span class="hide-menu">实验室管理</span></a> </li>
-                            <li> <a href="add_teacher.html"><i data-icon="&#xe025;" class="linea-icon linea-basic fa-fw"></i> </i><span class="hide-menu">导师管理</span></a> </li>
+                            <li> <a href="add_teacher.html"><i data-icon="&#xe025;" class="linea-icon linea-basic fa-fw"></i><span class="hide-menu">导师管理</span></a> </li>
                         </ul>
                     </li>
                     <li> <a href="#" class="waves-effect active"><i class="mdi mdi-format-color-fill fa-fw"></i> <span class="hide-menu">用户密码重置<span class="fa arrow"></span>  </span></a>
