后台接口全部完成 融合一包糖的前端

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -40,7 +40,7 @@
                 //发送请求
                 $.ajax({
                     type : "POST",
-                    url : "../login/login.action",
+                    url : "/login/login.action",
                     dataType : "json",
                     contentType: "application/json",
                     data : JSON.stringify({
