--- a/src/main/webapp/report/admin_index.html
+++ b/src/main/webapp/report/admin_index.html
@@ -58,19 +58,55 @@
     <!-- ============================================================== -->
     <!-- Page Content -->
     <!-- ============================================================== -->
-    <div id="page-wrapper">
-        <div class="container-fluid">
+    <div id="page-wrapper" style="padding-bottom: 0">
+        <div class="container-fluid" style="padding: 0">
             <div class="row bg-title">
                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
                     <button class="right-side-toggle waves-effect waves-light btn-info btn-circle pull-right m-l-20"><i class="ti-settings text-white"></i></button>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="white-box">
-                        <h3 class="box-title">欢迎</h3> </div>
-                </div>
+            <div>
+                        <div style="background: url('paroller/student.jpg') center no-repeat;background-size: cover; height: 700px;position:relative;" data-paroller-factor="0.5">
+                            <div style="   width:600px;  height:100px;  position:absolute;  left:50%;  top:50%;  margin:-150px 0 0 -200px;color:#ffffff;font-size: 4em;font-weight: bold">
+                                从这里管理实验室
+                            </div>
+                            <div style="   width:600px;  height:100px;  position:absolute;  left:50%;  top:50%;  margin:-50px 0 0 -200px;color:#ffffff;font-size: 2em;font-weight: lighter">
+                                数风流人物
+                            </div>
+                        </div>
+                        <div style="background: url('paroller/desk.jpg') center no-repeat;background-size: cover; height: 700px;position:relative;" data-paroller-factor="0.5">
+                            <div style="   width:600px;  height:100px;  position:absolute;  left:50%;  top:50%;  margin:-150px 0 0 -300px;color:#111111;font-size: 4em;font-weight: bold">
+                                忘了密码？？？
+                            </div>
+                            <div style="   width:600px;  height:100px;  position:absolute;  left:50%;  top:50%;  margin:-50px 0 0 -300px;color:#111111;font-size: 2em;font-weight: lighter">
+                                不要怕
+                            </div>
+                        </div>
+                        <div style="background: url('paroller/tools.jpg') center no-repeat;background-size: cover; height: 700px;position:relative;" data-paroller-factor="0.5">
+                            <div style="   width:600px;  height:100px;  position:absolute;  left:50%;  top:50%;  margin:50px 0 0 -200px;color:#ffffff;font-size: 4em;font-weight: bold">
+                                随时，随处
+                            </div>
+                            <div style="   width:600px;  height:100px;  position:absolute;  left:50%;  top:50%;  margin:150px 0 0 -200px;color:#ffffff;font-size: 2em;font-weight: lighter">
+                                时时处处
+                            </div>
+                        </div>
+                        <div style="background: url('paroller/boy.jpg') center no-repeat;background-size: cover; height: 700px;position:relative;" data-paroller-factor="0.5">
+                            <div style="   width:600px;  height:100px;  position:absolute;  left:50%;  top:50%;  margin:-150px 0 0 -100px;color:#444444;font-size: 4em;font-weight: bold">
+                                确认过眼神
+                            </div>
+                            <div style="   width:600px;  height:100px;  position:absolute;  left:50%;  top:50%;  margin:-50px 0 0 -100px;color:#444444;font-size: 2em;font-weight: lighter">
+                                是最负责的你
+                            </div>
+                        </div>
+                        <div style="background: url('paroller/sun.jpg') center no-repeat;background-size: cover; height: 700px;position:relative;" data-paroller-factor="0.5">
+                            <div style="   width:200px;  height:100px;  position:absolute;  left:50%;  top:50%;  margin:-150px 0 0 -100px;color:#222222;font-size: 4em;font-weight: bold">
+                                走起
+                            </div>
+                            <div style="   width:200px;  height:100px;  position:absolute;  left:50%;  top:50%;  margin:-50px 0 0 -100px;color:#222222;font-size: 2em;font-weight: lighter">
+                                去管理
+                            </div>
+                        </div>
             </div>
 
 
@@ -118,6 +154,10 @@
 <script src="../plugins/bower_components/jquery/dist/jquery.min.js"></script>
 <script>
     $(document).ready(function () {
+
+        $(window).paroller();
+
+
         $("#LeftSlidebar").load("LeftSlidebarAdmin.html", function () {
             <!-- Menu Plugin JavaScript -->
             $.getScript("../plugins/bower_components/sidebar-nav/dist/sidebar-nav.min.js",function () {
@@ -176,6 +216,8 @@
 <!--Style Switcher -->
 <script src="../plugins/bower_components/styleswitcher/jQuery.style.switcher.js"></script>
 
+
+<script src="paroller/jquery.paroller.min.js"></script>
 </body>
 
 </html>
