--- a/src/main/webapp/report/TopNavigationStudent.html
+++ b/src/main/webapp/report/TopNavigationStudent.html
@@ -5,7 +5,7 @@
     <div class="navbar-header">
         <div class="top-left-part">
             <!-- Logo -->
-            <a class="logo" href="student_index.html">
+            <a class="logo" href="login.html">
                 <!-- Logo icon image, you can use font-icon also --><b>
                 <!--This is dark logo icon--><img src="../plugins/images/admin-logo.png" alt="home" class="dark-logo" /><!--This is light logo icon--><img src="../plugins/images/admin-logo-dark.png" alt="home" class="light-logo" />
             </b>
