使用三个设计模式，在pattern包中

--- a/src/main/webapp/report/login.html
+++ b/src/main/webapp/report/login.html
@@ -43,9 +43,9 @@
               <div class="inner-panel">
                   <a href="javascript:void(0)" class="p-20 di"><img src="../plugins/images/favicon.png"></a>
                   <div class="lg-content">
-                      <h2>指导老师：谢波</h2>
-                      <p class="text-muted">王腾 唐博奕 楼宇宽 孔剑敏</p>
-                      <a href="http://wpa.qq.com/msgrd?v=3&uin=452128995&site=qq&menu=yes" class="btn btn-rounded btn-danger p-l-20 p-r-20">联系开发小组</a>
+                      <h2>指导老师：谢满德</h2>
+                      <p class="text-muted"></p>
+                      <a href="http://wpa.qq.com/msgrd?v=3&uin=452128995&site=qq&menu=yes" class="btn btn-rounded btn-danger p-l-20 p-r-20">联系开发者</a>
                   </div>
               </div>
       </div>
